--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -1,108 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/edit_icon_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/edit_ic"
-        android:layout_gravity="end"
-        android:layout_marginTop="@dimen/edit_text_margin"
-        android:layout_marginEnd="@dimen/edit_text_margin"
-        android:contentDescription="@string/edit_image_disc" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/edit_text_margin"
-        android:layout_marginBottom="@dimen/edit_text_margin"
-        app:cardCornerRadius="@dimen/card_view_radius">
-
-        <ImageView
-            android:id="@+id/my_profile_image"
-            android:layout_width="@dimen/image_view_dims"
-            android:layout_height="@dimen/image_view_dims"
-            android:layout_gravity="center"
-            android:contentDescription="@string/my_profile_image_disc"
-            android:src="@drawable/ic_launcher_background" />
-
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/edit_text_margin"
-        android:layout_marginTop="@dimen/edit_text_margin"
-        android:text="@string/name_info_header"
-        app:drawableStartCompat="@drawable/person_ic" />
-
-    <TextView
-        android:id="@+id/person_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_start_custom"
-        android:text="@string/name_placeholder" />
-
-    <View
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        android:layout_marginTop="@dimen/edit_text_margin"
-        android:layout_marginBottom="@dimen/edit_text_margin"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/edit_text_margin">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/address_info_header"
-        android:layout_marginStart="@dimen/edit_text_margin"
-        app:drawableStartCompat="@drawable/ic_globe_solid" />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/address_placeholder"
-        android:layout_marginStart="@dimen/margin_start_custom"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/my_profile_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/my_profile_image_disc"
+                android:src="@drawable/avatar_placeholder"
+                android:minHeight="250dp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        android:layout_marginTop="@dimen/edit_text_margin"
-        android:layout_marginBottom="@dimen/edit_text_margin"/>
+        <com.google.android.material.divider.MaterialDivider
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/edit_text_margin"
+                android:layout_marginBottom="@dimen/edit_text_margin" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/gender_header"
-        app:drawableStartCompat="@drawable/gender_ic"
-        android:layout_marginStart="@dimen/edit_text_margin"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/name_info_header"
+                app:drawableStartCompat="@drawable/person_ic" />
 
-    <TextView
-        android:id="@+id/gender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/gender_placeholder"
-        android:layout_marginStart="@dimen/margin_start_custom"/>
+        <TextView
+                android:id="@+id/person_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/age_header"
-        app:drawableStartCompat="@drawable/birthdate_ic"
-        android:layout_marginStart="@dimen/edit_text_margin"
-        android:layout_marginTop="@dimen/edit_text_margin"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email"
+                app:drawableStartCompat="@drawable/email_ic"
+                android:layout_marginTop="@dimen/edit_text_margin" />
 
-    <TextView
-        android:id="@+id/birthdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/age_placeholder"
-        android:layout_marginStart="@dimen/margin_start_custom"/>
+        <TextView
+                android:id="@+id/person_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp" />
 
-</LinearLayout>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/phone"
+                app:drawableStartCompat="@drawable/phone_ic"
+                android:layout_marginTop="@dimen/edit_text_margin" />
+
+        <TextView
+                android:id="@+id/person_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp" />
+
+
+        <com.google.android.material.divider.MaterialDivider
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/edit_text_margin"
+                android:layout_marginBottom="@dimen/edit_text_margin" />
+
+        <Button
+                android:id="@+id/to_edit_frag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                android:text="@string/edit_profile_nav"
+                android:backgroundTint="@color/teal_200"
+                android:textColor="@color/black"
+                android:drawableLeft="@drawable/edit_ic" />
+
+        <Button
+                android:id="@+id/sign_out_but"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/Sign_out"
+                android:backgroundTint="@color/red"
+                android:textColor="@color/black"
+                android:drawableLeft="@drawable/login_ic" />
+    </LinearLayout>
+
+</ScrollView>
