leave a comment functionality is implemented in movie, tv and games

--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -10,14 +10,6 @@
             android:orientation="horizontal"
             android:layout_marginTop="@dimen/edit_text_margin">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/commenter_avatar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@mipmap/tmdb"
-                android:layout_marginStart="@dimen/edit_text_margin"/>
-
         <TextView
                 android:id="@+id/sender_name_id"
                 android:layout_width="0dp"
@@ -35,6 +27,13 @@
                 android:text="@string/home_text" />
 
     </LinearLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/commenter_avatar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/avatar_placeholder"
+            android:layout_marginStart="@dimen/edit_text_margin" />
 
     <TextView
             android:id="@+id/comment_id"
