small design update including adding placeholder images

--- a/app/src/main/res/layout/free_to_play_screen_shot_item.xml
+++ b/app/src/main/res/layout/free_to_play_screen_shot_item.xml
@@ -10,6 +10,7 @@
             android:layout_height="match_parent"
             android:minHeight="350dp"
             android:paddingStart="5dp"
-            android:paddingEnd="5dp"/>
+            android:paddingEnd="5dp"
+            android:src="@drawable/place_holder_pic"/>
 
 </LinearLayout>
