--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,7 +33,8 @@
         <ImageView
                 android:id="@+id/rawg_ref_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/place_holder_pic"/>
 
         <TextView
                 android:layout_width="match_parent"
@@ -51,7 +52,8 @@
         <ImageView
                 android:id="@+id/tmdb_ref_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:src="@drawable/place_holder_pic"/>
 
     </LinearLayout>
 
